# core

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: changelog.rst  installing.rst
sw_core_data_types/src/sw_core/data_types/: __init__.py  mutable_string.py
sw_core_data_types/src/sw_core/data_types/tests/: test_mutable_string.py
sw_core_parameters/src/sw_core/parameters/: parameters.py  parameters2.py
sw_core_parameters/src/sw_core/parameters/_aux/: bool.py  float.py  int.py  list.py  parameter.py
sw_core_parameters/src/sw_core/parameters/tests/: test_parameters.json  test_parameters.py
