[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sw_core"
version = "0.0.1"
authors = [
  { name="StudioWEngineers", email="studio.w.engineers@gmail.com" },
]
description = "The Studio W developments core package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["numpy"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
"sw_core_data_types" = ["py.typed"]
"sw_core_parameters" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["sw_core_data_types/src", "sw_core_parameters/src"]
include = ["sw_core.*"]
exclude = ["*.tests*"]
